# examples

./: .gitignore  Cargo.toml  README.md  justfile
.circleci/: config.yml
.github/workflows/: ci.yml
eg-0.6/: Cargo.toml  README.md
eg-0.7/: Cargo.toml  README.md
eg-0.7/examples/: demo-pacman.rs  primitives-fill.rs  primitives-stroke-alignment.rs  text-alignment.rs  text-multiline.rs
eg-0.8/: Cargo.toml  README.md
eg-0.8/examples/: demo-digital-clock.rs  demo-progress.rs  text-custom-font.rs  text-textbox.rs
eg-next/: Cargo.toml  README.md
eg-next/examples/: analog-clock.rs  anim8.rs  choppa.rs  demo-progress.rs  hello-world.rs  image-sub-image.rs  line-thickness.rs  primitives-ellipse.rs  primitives-fill.rs  primitives-polyline.rs  primitives-rounded-rectangle.rs  primitives-stroke-alignment.rs  primitives-stroke.rs  primitives-triangles.rs  progress.rs  rectangle-intersection.rs  text-alignment.rs  text-custom-font.rs  text-extended-characters.rs  text-fonts-signs.rs  text-fonts.rs  text-multiline.rs  text-styles.rs  text-transparent.rs
eg-next/examples/assets/: chopper.xcf
examples/: analog-clock.rs  input-handling.rs  line-thickness.rs  primitives-rounded-rectangle.rs  progress.rs  text-custom-font.rs  text-fonts.rs  text-multiline.rs  text-transparent.rs
framework/: Cargo.toml
framework/src/: lib.rs  parameter.rs  parameters.rs  parameters_builder.rs
line/: Cargo.toml
line/src/: main.rs
src/: main.rs
