[package]
name = "eg-examples"
version = "0.1.0"
authors = ["Ralf Fuest <mail@rfuest.de>"]
edition = "2018"

# TODO: use e-g release from crates.io
[dependencies]
chrono = "0.4.19"
embedded-graphics = { git = "https://github.com/embedded-graphics/embedded-graphics.git" }
embedded-graphics-simulator = { git = "https://github.com/embedded-graphics/simulator.git" }
tinybmp = { git = "https://github.com/embedded-graphics/tinybmp.git" }
tinytga = { git = "https://github.com/embedded-graphics/tinytga.git" }

# TODO: remove when dependencies are updated
[patch.crates-io]
embedded-graphics = { git = "https://github.com/embedded-graphics/embedded-graphics.git" }
embedded-graphics-core = { git = "https://github.com/embedded-graphics/embedded-graphics.git" }
tinybmp = { git = "https://github.com/embedded-graphics/tinybmp.git" }
tinytga = { git = "https://github.com/embedded-graphics/tinytga.git" }
