[package]
name = "eg-examples"
version = "0.1.0"
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "0.4.19"
embedded-graphics = "0.7.0-beta.1"
embedded-graphics-simulator = "0.3.0-beta.2"
tinybmp = { git = "https://github.com/embedded-graphics/tinybmp.git" }
tinytga = { git = "https://github.com/embedded-graphics/tinytga.git" }

