[package]
name = "framework"
version = "0.1.0"
authors = ["Ralf Fuest <mail@rfuest.de>"]
edition = "2018"
publish = false

[dependencies]
embedded-graphics = { git = "https://github.com/embedded-graphics/embedded-graphics.git"}
embedded-graphics-simulator = { git = "https://github.com/embedded-graphics/simulator.git"}
sdl2 = "0.32.2"
